@@ -1,3 +1,8 @@
+2024-03-20  Niels Möller  <nisse@lysator.liu.se>
+
+	* testsuite/gcm-test.c (test_main): Add a test case that triggers
+	32-bit counter wraparound for gcm_aes128.
+
 2024-03-10  Niels Möller  <nisse@lysator.liu.se>
 
 	From Daiki Ueno:
